# pj-xps-trvint-app

./: .gitignore  README.md  pyproject.toml
notebooks/: ParseMailAndGenMail.ipynb
src/: app.py  create_chat_answer.py  data_class.py  mail_assistant.py  prompts.py  test.py
src/templates/: index.html
