[tool.poetry]
name = "pj-xps-trvint-app"
version = "0.1.0"
description = ""
authors = ["shue shiinoki"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mailbox = "^0.4"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
tqdm = "^4.66.2"
matplotlib = "^3.8.3"
langchain = "^0.1.11"
openai = "^1.13.3"
flask = "^3.0.2"
langchain-openai = "^0.0.8"
python-dotenv = "^1.0.1"
pydantic = "^2.6.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
black = "^24.2.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
